EITI-140: Fix bookmarks widget style on mobile devices.

--- a/public_html/sites/all/themes/eiti/styles/widgets/bookmarks.css.less
+++ b/public_html/sites/all/themes/eiti/styles/widgets/bookmarks.css.less
@@ -56,20 +56,6 @@
   }
 }
 
-.xSmallOnly() {
-  .predefined-widget--bookmarks {
-    .bookmark-items-wrapper {
-      max-width: 19em;
-    }
-  }
-}
-.xMediumOnly() {
-  .predefined-widget--bookmarks {
-    .bookmark-items-wrapper {
-      max-width: 29em;
-    }
-  }
-}
 .xMediumAndDown() {
   .predefined-widget--bookmarks {
     .bookmark-items-wrapper {
@@ -77,6 +63,7 @@
       & > li {
         float: none;
         margin: 0 auto;
+        max-width: 100%
       }
     }
   }
